--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <title>Aluraflix</title>
   </head>
 
@@ -28,9 +27,30 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
+          allowfullscreen></iframe>
       </div>
     </section>
+
+    <section>
+        <h2>Filmes e séries</h2>
+        <div>
+          <a href="https://www.youtube.com/watch?v=CFmf1bnS-jk">
+            <img src="https://img.youtube.com/vi/CFmf1bnS-jk/maxresdefault.jpg" />
+          </a>
+          <a href="https://www.youtube.com/watch?v=s-8d9vzNTv0">
+            <img src="https://img.youtube.com/vi/s-8d9vzNTv0/maxresdefault.jpg" />
+          </a>
+          <a href="https://www.youtube.com/watch?v=ME0QiRVsmVI">
+           <img src="https://img.youtube.com/vi/ME0QiRVsmVI/maxresdefault.jpg" />
+          </a>
+          <a href="https://www.youtube.com/watch?v=ZnFuw3cvZ6I">
+            <img src="https://img.youtube.com/vi/ZnFuw3cvZ6I/maxresdefault.jpg" />
+          </a>
+          <a href="https://www.youtube.com/watch?v=MntujrIW5VE">
+            <img src="https://img.youtube.com/vi/MntujrIW5VE/maxresdefault.jpg" />
+          </a>
+        </div>
+      </section>
+      
   </body>
 </html>
