--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
     <section>
         <h2>Filmes e séries</h2>
-        <div>
+        <div class="categoria-videos">
           <a href="https://www.youtube.com/watch?v=CFmf1bnS-jk">
             <img src="https://img.youtube.com/vi/CFmf1bnS-jk/maxresdefault.jpg" />
           </a>
           <a href="https://www.youtube.com/watch?v=s-8d9vzNTv0">
             <img src="https://img.youtube.com/vi/s-8d9vzNTv0/maxresdefault.jpg" />
           </a>
-          <a href="https://www.youtube.com/watch?v=ME0QiRVsmVI">
-           <img src="https://img.youtube.com/vi/ME0QiRVsmVI/maxresdefault.jpg" />
+          <a href="https://www.youtube.com/watch?v=4-9lofcdxr4">
+           <img src="https://img.youtube.com/vi/4-9lofcdxr4/maxresdefault.jpg" />
           </a>
           <a href="https://www.youtube.com/watch?v=ZnFuw3cvZ6I">
             <img src="https://img.youtube.com/vi/ZnFuw3cvZ6I/maxresdefault.jpg" />
@@ -51,6 +51,6 @@
           </a>
         </div>
       </section>
-      
+
   </body>
 </html>
