--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-          <a href="https://www.youtube.com/watch?v=CFmf1bnS-jk">
-            <img src="https://img.youtube.com/vi/CFmf1bnS-jk/maxresdefault.jpg" />
-          </a>
-          <a href="https://www.youtube.com/watch?v=s-8d9vzNTv0">
-            <img src="https://img.youtube.com/vi/s-8d9vzNTv0/maxresdefault.jpg" />
-          </a>
-          <a href="https://www.youtube.com/watch?v=4-9lofcdxr4">
-           <img src="https://img.youtube.com/vi/4-9lofcdxr4/maxresdefault.jpg" />
-          </a>
-          <a href="https://www.youtube.com/watch?v=ZnFuw3cvZ6I">
-            <img src="https://img.youtube.com/vi/ZnFuw3cvZ6I/maxresdefault.jpg" />
-          </a>
-          <a href="https://www.youtube.com/watch?v=MntujrIW5VE">
-            <img src="https://img.youtube.com/vi/MntujrIW5VE/maxresdefault.jpg" />
-          </a>
+<a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            </a>
         </div>
-      </section>
+    </section>
 
-  </body>
-  
+</body>
+
 </html>
